--- a/app/[lang]/(with-footer)/rooms/page.module.scss
+++ b/app/[lang]/(with-footer)/rooms/page.module.scss
@@ -5,6 +5,6 @@
 		left: 50%;
 		bottom: 80px;
 		transform: translateX(-50%);
-		z-index: 2;
+		z-index: 3;
 	}
 }
