--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -12,7 +12,7 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	z-index: 3;
+	z-index: 5;
 	@include mobile {
 		display: flex;
 		justify-content: space-between;
